# radiosity-solver

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/geometry/: CMakeLists.txt  point.cpp  point.hpp  point3d.cpp  point3d.hpp  quad.cpp  quad.hpp  shape.cpp  shape.hpp  triangle.cpp  triangle.hpp
src/physics/: CMakeLists.txt  formfactor.cpp  formfactor.hpp  material.cpp  material.hpp  patch.cpp  patch.hpp
test/: BoostTestHelpers.cmake  CMakeLists.txt
test/geometry/: CMakeLists.txt  testquad.cpp  testtriangle.cpp
